--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "moment-timezone": "^0.5.45",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
