--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "type": "module",
   "scripts": {
     "start": "concurrently \"tsc -w\" \"nodemon dist/app\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
+    "socket.io": "^4.7.4",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
