--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "ESNext",
+    "target": "ES2018",
+    "module": "CommonJS",
     "sourceMap": true,
     "outDir": "dist",
     "moduleResolution": "node",
