--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "d3": "^7.9.0",
     "moment-timezone": "^0.5.45",
     "next": "14.1.0",
     "react": "^18",
@@ -17,6 +18,7 @@
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
